--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "data = datautils.Data.from_ticker('VALE3.SA')"
+    "data = datautils.Data.from_ticker('PETR4.SA')"
    ]
   },
   {
@@ -78,7 +78,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ticker</th>\n",
-       "      <th>VALE3.SA</th>\n",
+       "      <th>PETR4.SA</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -88,23 +88,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-07-29</th>\n",
-       "      <td>62.950001</td>\n",
+       "      <td>23.170000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-30</th>\n",
-       "      <td>61.270000</td>\n",
+       "      <td>22.820000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-31</th>\n",
-       "      <td>60.709999</td>\n",
+       "      <td>22.200001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-03</th>\n",
-       "      <td>60.259998</td>\n",
+       "      <td>21.799999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-04</th>\n",
-       "      <td>60.700001</td>\n",
+       "      <td>21.780001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,23 +112,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-01-22</th>\n",
-       "      <td>67.800003</td>\n",
+       "      <td>37.700001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-01-23</th>\n",
-       "      <td>69.199997</td>\n",
+       "      <td>38.169998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-01-24</th>\n",
-       "      <td>69.900002</td>\n",
+       "      <td>37.880001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-01-25</th>\n",
-       "      <td>68.180000</td>\n",
+       "      <td>39.279999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-01-26</th>\n",
-       "      <td>69.500000</td>\n",
+       "      <td>39.959999</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -137,19 +137,19 @@
       ],
       "text/plain": [
        "Price           Close\n",
-       "Ticker       VALE3.SA\n",
+       "Ticker       PETR4.SA\n",
        "Date                 \n",
-       "2020-07-29  62.950001\n",
-       "2020-07-30  61.270000\n",
-       "2020-07-31  60.709999\n",
-       "2020-08-03  60.259998\n",
-       "2020-08-04  60.700001\n",
+       "2020-07-29  23.170000\n",
+       "2020-07-30  22.820000\n",
+       "2020-07-31  22.200001\n",
+       "2020-08-03  21.799999\n",
+       "2020-08-04  21.780001\n",
        "...               ...\n",
-       "2024-01-22  67.800003\n",
-       "2024-01-23  69.199997\n",
-       "2024-01-24  69.900002\n",
-       "2024-01-25  68.180000\n",
-       "2024-01-26  69.500000\n",
+       "2024-01-22  37.700001\n",
+       "2024-01-23  38.169998\n",
+       "2024-01-24  37.880001\n",
+       "2024-01-25  39.279999\n",
+       "2024-01-26  39.959999\n",
        "\n",
        "[869 rows x 1 columns]"
       ]
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets, scaler = datautils.normalize_and_split(data)"
+    "datasets, scaler = datautils.normalize_and_split(data, lookback=30)"
    ]
   },
   {
@@ -198,47 +198,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 20ms/step - loss: 0.1248 - val_loss: 0.0097\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 20ms/step - loss: 0.0898 - val_loss: 0.0198\n",
       "Epoch 2/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - loss: 0.0102 - val_loss: 0.0033\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0128 - val_loss: 0.0088\n",
       "Epoch 3/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - loss: 0.0083 - val_loss: 0.0020\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0101 - val_loss: 0.0062\n",
       "Epoch 4/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0070 - val_loss: 0.0032\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0082 - val_loss: 0.0041\n",
       "Epoch 5/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0079 - val_loss: 0.0023\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0089 - val_loss: 0.0081\n",
       "Epoch 6/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0066 - val_loss: 0.0019\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0083 - val_loss: 0.0051\n",
       "Epoch 7/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0063 - val_loss: 0.0026\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0082 - val_loss: 0.0036\n",
       "Epoch 8/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0058 - val_loss: 0.0025\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0075 - val_loss: 0.0049\n",
       "Epoch 9/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0063 - val_loss: 0.0022\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0081 - val_loss: 0.0029\n",
       "Epoch 10/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0057 - val_loss: 0.0016\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0075 - val_loss: 0.0076\n",
       "Epoch 11/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0051 - val_loss: 0.0027\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0067 - val_loss: 0.0030\n",
       "Epoch 12/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0057 - val_loss: 0.0016\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0074 - val_loss: 0.0061\n",
       "Epoch 13/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0063 - val_loss: 0.0026\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0066 - val_loss: 0.0029\n",
       "Epoch 14/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0055 - val_loss: 0.0021\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0070 - val_loss: 0.0042\n",
       "Epoch 15/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0056 - val_loss: 0.0016\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0063 - val_loss: 0.0023\n",
       "Epoch 16/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0055 - val_loss: 0.0010\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0070 - val_loss: 0.0049\n",
       "Epoch 17/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0048 - val_loss: 0.0018\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0065 - val_loss: 0.0026\n",
       "Epoch 18/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0051 - val_loss: 0.0014\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0067 - val_loss: 0.0027\n",
       "Epoch 19/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0049 - val_loss: 0.0011\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0061 - val_loss: 0.0022\n",
       "Epoch 20/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0049 - val_loss: 0.0015\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0056 - val_loss: 0.0046\n",
       "Epoch 21/50\n",
-      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0047 - val_loss: 0.0012\n"
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0060 - val_loss: 0.0020\n",
+      "Epoch 22/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0053 - val_loss: 0.0020\n",
+      "Epoch 23/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0048 - val_loss: 0.0022\n",
+      "Epoch 24/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0048 - val_loss: 0.0020\n",
+      "Epoch 25/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 103ms/step - loss: 0.0058 - val_loss: 0.0019\n",
+      "Epoch 26/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 161ms/step - loss: 0.0050 - val_loss: 0.0021\n",
+      "Epoch 27/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0055 - val_loss: 0.0017\n",
+      "Epoch 28/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0044 - val_loss: 0.0017\n",
+      "Epoch 29/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 53ms/step - loss: 0.0047 - val_loss: 0.0019\n",
+      "Epoch 30/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 190ms/step - loss: 0.0055 - val_loss: 0.0021\n",
+      "Epoch 31/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 59ms/step - loss: 0.0056 - val_loss: 0.0024\n",
+      "Epoch 32/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 67ms/step - loss: 0.0052 - val_loss: 0.0016\n",
+      "Epoch 33/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 163ms/step - loss: 0.0047 - val_loss: 0.0019\n",
+      "Epoch 34/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0049 - val_loss: 0.0021\n",
+      "Epoch 35/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0040 - val_loss: 0.0015\n",
+      "Epoch 36/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0042 - val_loss: 0.0016\n",
+      "Epoch 37/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0048 - val_loss: 0.0015\n",
+      "Epoch 38/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0045 - val_loss: 0.0016\n",
+      "Epoch 39/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0041 - val_loss: 0.0018\n",
+      "Epoch 40/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0050 - val_loss: 0.0014\n",
+      "Epoch 41/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step - loss: 0.0043 - val_loss: 0.0014\n",
+      "Epoch 42/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0040 - val_loss: 0.0053\n",
+      "Epoch 43/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0045 - val_loss: 0.0021\n",
+      "Epoch 44/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - loss: 0.0034 - val_loss: 0.0034\n",
+      "Epoch 45/50\n",
+      "\u001b[1m26/26\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step - loss: 0.0037 - val_loss: 0.0020\n"
      ]
     }
    ],
@@ -256,7 +304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n"
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n"
      ]
     }
    ],
@@ -273,9 +321,9 @@
     {
      "data": {
       "text/plain": [
-       "{'MAE': 1.8043490483210638,\n",
-       " 'RMSE': np.float64(2.130484971746456),\n",
-       " 'MAPE': np.float64(3.4054277727829194)}"
+       "{'MAE': 0.5652659196120043,\n",
+       " 'RMSE': np.float64(0.7355349439436101),\n",
+       " 'MAPE': np.float64(1.8042131351842314)}"
       ]
      },
      "execution_count": 8,
@@ -294,108 +342,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>Price</th>\n",
-       "      <th>Close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>VALE3.SA</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-07-29</th>\n",
-       "      <td>62.950001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-07-30</th>\n",
-       "      <td>61.270000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-07-31</th>\n",
-       "      <td>60.709999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-03</th>\n",
-       "      <td>60.259998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-04</th>\n",
-       "      <td>60.700001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-01-22</th>\n",
-       "      <td>67.800003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-01-23</th>\n",
-       "      <td>69.199997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-01-24</th>\n",
-       "      <td>69.900002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-01-25</th>\n",
-       "      <td>68.180000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-01-26</th>\n",
-       "      <td>69.500000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>869 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Price           Close\n",
-       "Ticker       VALE3.SA\n",
-       "Date                 \n",
-       "2020-07-29  62.950001\n",
-       "2020-07-30  61.270000\n",
-       "2020-07-31  60.709999\n",
-       "2020-08-03  60.259998\n",
-       "2020-08-04  60.700001\n",
-       "...               ...\n",
-       "2024-01-22  67.800003\n",
-       "2024-01-23  69.199997\n",
-       "2024-01-24  69.900002\n",
-       "2024-01-25  68.180000\n",
-       "2024-01-26  69.500000\n",
-       "\n",
-       "[869 rows x 1 columns]"
+       "{'model_path': 'models/PETR4.SA_model.h5',\n",
+       " 'scaler_path': 'models/PETR4.SA_scaler.pkl',\n",
+       " 'dataset_path': 'models/PETR4.SA_dataset.pkl'}"
       ]
      },
      "execution_count": 10,
@@ -404,7 +362,7 @@
     }
    ],
    "source": [
-    "data.train"
+    "train.save_model('PETR4.SA', model, scaler, datasets['X_train'])"
    ]
   }
  ],
